--- a/styles/style.css
+++ b/styles/style.css
@@ -16,16 +16,95 @@
   /* выше установили ограничения для секции */
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
-}
-
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.margin-reset {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --bg-black: #1f1f1f;
+  --bg-grey: #f2f2f2;
+  --color-blue: #2f80ed;
+  --text-black: #000;
+}
+
+.header {
+  min-height: 600px;
+  max-height: 756px;
+  position: relative;
+  background-color: var(--bg-grey);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.header-logo {
+  background-image: url(/images/logo_place_header.svg);
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.logo_place_header {
+  background-size: contain;
+  width: 228px;
+  height: 32px;
+}
+
+.header__title {
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 600;
+  color: var(--text-black);
+  width: 730px;
+  margin-left: 64px;
+  z-index: 3;
+}
+
+.header__subtitle {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color: var(--text-black);
+  width: 388px;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  z-index: 3;
+}
+
+.header__link {
+  color: var(--color-blue);
+  text-decoration: none;
+  z-index: 3;
+}
+
+.header__main-illustration {
+  background-image: url(/images/header-image.png);
+  width: 765px;
+  height: 608px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.header__square-pic {
+  width: 568px;
+  height: 568px;
+  background-color: var(--color-blue);
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 1;
 }
