--- a/styles/style.css
+++ b/styles/style.css
@@ -16,14 +16,6 @@
   /* выше установили ограничения для секции */
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
-
 .margin-reset {
   margin: 0;
   padding: 0;
@@ -199,15 +191,13 @@
 .table__row {
   display: flex;
   justify-content: space-between;
-  margin: 60px 0;
-}
-
-.table__row:last-child {
-  margin: 0;
+  border: 1px solid red;
 }
 
 .table__cell {
   padding: 0;
+  margin-top: 60px;
+  border: 1px solid red;
 }
 
 .digits__cell {
@@ -270,4 +260,28 @@
   right: 48px;
   text-decoration: none;
   color: var(--color-blue);
+}
+
+.kaufman{
+  background-color: var(--bg-black);
+  padding: 90px 0;
+}
+
+.section-title_theme_dark{
+  color: white;
+}
+
+.section-subtitle_theme_dark{
+  color: white;
+}
+
+.kaufman-table{
+  margin: auto;
+}
+/* и элемента с модификатором вида ключ-значение */
+.table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
 }
