--- a/styles/style.css
+++ b/styles/style.css
@@ -181,9 +181,6 @@
 
 .table {
   border-collapse: collapse;
-}
-
-.digits-table {
   width: 1100px;
   margin: auto;
 }
@@ -191,13 +188,11 @@
 .table__row {
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
 }
 
 .table__cell {
   padding: 0;
   margin-top: 60px;
-  border: 1px solid red;
 }
 
 .digits__cell {
@@ -265,6 +260,8 @@
 .kaufman{
   background-color: var(--bg-black);
   padding: 90px 0;
+  position: relative;
+  overflow: hidden;
 }
 
 .section-title_theme_dark{
@@ -277,6 +274,7 @@
 
 .kaufman-table{
   margin: auto;
+  position: relative;
 }
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
@@ -284,4 +282,15 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.kaufman__triangle{
+  width: 877px;
+  height: 877px;
+  background-image: url(/images/kaufman-triangle.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  right: -210px;
 }
