--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,6 @@
 }
 
 .header-logo {
-  background-image: url(/images/logo_place_header.svg);
   position: absolute;
   top: 30px;
   left: 64px;
@@ -49,6 +48,7 @@
   background-size: contain;
   width: 228px;
   height: 32px;
+  background-image: url(/images/logo_place_header.svg);
 }
 
 .header__title {
@@ -295,4 +295,64 @@
   top: 0;
   right: -210px;
   z-index: 0;
+}
+
+.footer{
+  background-color: var(--bg-black);
+  min-height: 350px;
+  display: flex;
+}
+
+.footer__columns{
+  width: 90%;
+  margin: 60px auto 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright{
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  background-size: contain;
+  width: 228px;
+  height: 32px;
+  background-image: url(/images/logo_place_footer.svg);
+}
+
+.footer-author{
+  color: white;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 18px 0;
+}
+
+.footer__column-heading{
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer__column-links{
+  list-style-type: none;
+  margin: 20px 0 18px;
+}
+
+.footer__column-link{
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+  display: flex;
+}
+
+.footer__social-icon{
+  margin-right: 10px;
 }
