--- a/styles/style.css
+++ b/styles/style.css
@@ -124,7 +124,7 @@
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
-  list-style-type: none;
+  list-style: none;
   margin: 0;
   padding: 0;
 }
@@ -344,7 +344,7 @@
 }
 
 .footer__column-links{
-  list-style-type: none;
+  list-style: none;
   margin: 20px 0 18px;
 }
 
