--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@
   background-size: contain;
   width: 228px;
   height: 32px;
-  background-image: url(/images/logo_place_header.svg);
+  background-image: url(../images/logo_place_header.svg);
 }
 
 .header__title {
@@ -74,7 +74,7 @@
 }
 
 .header__main-illustration {
-  background-image: url(/images/header-image.png);
+  background-image: url(../images/header-image.png);
   width: 765px;
   height: 608px;
   background-size: cover;
@@ -212,7 +212,7 @@
 
 .feynman {
   height: 890px;
-  background-image: url(/images/feynman.png);
+  background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: bottom left;
@@ -286,7 +286,7 @@
 .kaufman__triangle{
   width: 877px;
   height: 877px;
-  background-image: url(/images/kaufman-triangle.svg);
+  background-image: url(../images/kaufman-triangle.svg);
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
@@ -319,7 +319,7 @@
   background-size: contain;
   width: 228px;
   height: 32px;
-  background-image: url(/images/logo_place_footer.svg);
+  background-image: url(../images/logo_place_footer.svg);
 }
 
 .footer-author{
