--- a/styles/style.css
+++ b/styles/style.css
@@ -32,17 +32,17 @@
   justify-content: center;
 }
 
-.header-logo {
-  position: absolute;
-  top: 30px;
-  left: 64px;
+.logo{
+  background-image: url(../images/logo_place_header.svg);
+  width: 228px;
+  height: 32px;
+  background-size: contain;
 }
 
 .logo_place_header {
-  background-size: contain;
-  width: 228px;
-  height: 32px;
-  background-image: url(../images/logo_place_header.svg);
+  position: absolute;
+  top: 30px;
+  left: 64px;
 }
 
 .header__title {
@@ -51,6 +51,8 @@
   font-weight: 600;
   color: var(--text-black);
   width: 730px;
+  margin: 0;
+  padding: 0;
   margin-left: 64px;
   z-index: 3;
 }
@@ -65,6 +67,8 @@
   bottom: 30px;
   left: 64px;
   z-index: 3;
+  margin: 0;
+  padding: 0;
 }
 
 .header__link {
@@ -316,9 +320,6 @@
 }
 
 .logo_place_footer {
-  background-size: contain;
-  width: 228px;
-  height: 32px;
   background-image: url(../images/logo_place_footer.svg);
 }
 
