--- a/styles/style.css
+++ b/styles/style.css
@@ -150,6 +150,8 @@
 }
 
 .section-title {
+  margin: 0 auto 20px;
+  padding: 0;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
@@ -157,11 +159,12 @@
   display: flex;
   width: 60%;
   justify-content: center;
-  margin: auto;
   text-align: center;
 }
 
 .section-subtitle {
+  margin: 0 auto;
+  padding: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -169,27 +172,22 @@
   display: flex;
   width: 60%;
   justify-content: center;
-  margin: auto;
   text-align: center;
 }
 
 .table {
-  border-collapse: collapse;
   width: 1100px;
-  margin: auto;
-}
-
-.table__row {
+  list-style: none;
+  margin: 0 auto;
+  padding: 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .table__cell {
   padding: 0;
   margin-top: 60px;
-}
-
-.digits__cell {
   width: 250px;
 }
 
@@ -197,17 +195,16 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
+  margin: 0;
+  padding: 0;
 }
 
 .table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin: 20px 0;
-}
-
-.table__text:last-child {
-  margin-bottom: 0;
+  margin: 20px 0 0 0;
+  padding: 0;
 }
 
 .feynman {
