--- a/styles/style.css
+++ b/styles/style.css
@@ -208,45 +208,46 @@
 }
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   background-image: url(../images/feynman.png);
   background-color: var(--bg-light);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: bottom left;
-  margin-top: 100px;
+  margin: 100px 0 0 0;
   position: relative;
 }
 
-.feynman-title {
+.feynman__title {
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
+  color: var(--text-black);
   width: 648px;
   text-align: center;
   margin: 100px auto 70px;
-  color: var(--text-black);
+  padding: 100px 0 0 0;
 }
 
-.feynman-subtitle {
+.feynman__subtitle {
+  margin: 70px auto 0;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  color: var(--text-black);
   width: fit-content;
   text-align: center;
-  margin: 0 auto;
-  color: var(--text-black);
 }
 
-.feynman-link {
+.feynman__link {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  color: var(--link-default);
   position: absolute;
   top: 50%;
   right: 48px;
   text-decoration: none;
-  color: var(--link-default);
 }
 
 .kaufman{
