--- a/styles/style.css
+++ b/styles/style.css
@@ -76,6 +76,10 @@
   z-index: 3;
 }
 
+.header__link:hover{
+  text-decoration: underline;
+}
+
 .header__main-illustration {
   background-image: url(../images/header-image.png);
   width: 765px;
@@ -250,6 +254,10 @@
   text-decoration: none;
 }
 
+.feynman__link:hover{
+  text-decoration: underline;
+}
+
 .kaufman{
   background-color: var(--bg-dark);
   padding: 90px 0;
@@ -317,7 +325,7 @@
   background-image: url(../images/logo_place_footer.svg);
 }
 
-.footer-author{
+.footer__author{
   color: white;
   line-height: 25px;
   font-size: 18px;
@@ -330,11 +338,14 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
+  margin: 0;
+  padding: 0;
 }
 
 .footer__column-links{
   list-style: none;
   margin: 20px 0 18px;
+  padding: 0;
 }
 
 .footer__column-link{
@@ -344,6 +355,10 @@
   font-weight: normal;
   text-decoration: none;
   display: flex;
+}
+
+.footer__column-link:hover{
+  text-decoration: underline;
 }
 
 .footer__social-icon{
