--- a/styles/style.css
+++ b/styles/style.css
@@ -9,16 +9,11 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.margin-reset {
-  margin: 0;
-  padding: 0;
-}
-
 :root {
   --bg-dark: #1f1f1f;
   --bg-light: #f2f2f2;
   --link-default: #2f80ed;
-  --text-black: #000;
+  --text-default: #000;
 }
 
 .header {
@@ -50,10 +45,10 @@
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
-  color: var(--text-black);
+  color: var(--text-default);
   width: 730px;
   padding: 0;
-  z-index: 3;
+  z-index: 2;
 }
 
 .header__subtitle {
@@ -62,12 +57,12 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  color: var(--text-black);
+  color: var(--text-default);
   width: 388px;
   position: absolute;
   bottom: 30px;
   left: 64px;
-  z-index: 3;
+  z-index: 2;
 }
 
 .header__link {
@@ -89,7 +84,7 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  z-index: 2;
+  z-index: 1;
 }
 
 .header__square-pic {
@@ -99,7 +94,6 @@
   position: absolute;
   top: 64px;
   right: 0;
-  z-index: 1;
 }
 
 .description {
@@ -135,7 +129,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  color: var(--text-black);
+  color: var(--text-default);
 }
 
 .two-columns__paragraph:last-child {
@@ -146,7 +140,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: 600;
-  color: var(--text-black);
+  color: var(--text-default);
 }
 
 .digits {
@@ -159,7 +153,7 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
-  color: var(--text-black);
+  color: var(--text-default);
   display: flex;
   width: 60%;
   justify-content: center;
@@ -172,7 +166,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  color: var(--text-black);
+  color: var(--text-default);
   display: flex;
   width: 60%;
   justify-content: center;
@@ -226,7 +220,7 @@
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
-  color: var(--text-black);
+  color: var(--text-default);
   width: 648px;
   text-align: center;
   margin: 100px auto 70px;
@@ -238,7 +232,7 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  color: var(--text-black);
+  color: var(--text-default);
   width: fit-content;
   text-align: center;
 }
