--- a/styles/style.css
+++ b/styles/style.css
@@ -217,14 +217,14 @@
 }
 
 .feynman__title {
+  margin: 0 auto;
+  padding: 100px 0 0 0;
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
   color: var(--text-default);
   width: 648px;
   text-align: center;
-  margin: 100px auto 70px;
-  padding: 100px 0 0 0;
 }
 
 .feynman__subtitle {
