go to the last review

--- a/styles/style.css
+++ b/styles/style.css
@@ -283,7 +283,7 @@
   width: 200px;
   color: white;
   /* В модификаторах указываются только изменяющиеся стили. Строка margin-right: 0; лишняя, так как для элемента table__cell не задан margin-right, поэтому нет необходимости его добавлять в модификатор (по умолчанию он и так равен 0). */
-  /* Убрал margin-right: 0; как и было указано в комментариях ревьювера, но либо указывайте, что изначальные стили style.css, данные в качестве примера, нужно изменять, либо уберите этот margin-right: 0; в изначальных стилях style.css*/
+  /* Убрал margin-right: 0; как и было указано в комментариях ревьювера. Но либо указывайте, что изначальные стили style.css, данные в качестве примера, нужно изменять, либо уберите этот margin-right: 0; в изначальных стилях style.css*/
   margin-top: 80px;
 }
 
