--- a/styles/style.css
+++ b/styles/style.css
@@ -143,6 +143,48 @@
   color: var(--text-default);
 }
 
+.techniques{
+  margin: 100px auto;
+  max-width: 80%;
+}
+.cards{
+  max-width: 920px;
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.cards__item{
+  display: flex;
+  /* margin: 0 100px 0 0; */
+  width: 240px;
+  flex-direction: column;
+  align-items: center;
+}
+.card__image{
+  width: 160px;
+  height: 160px;
+  margin: 60px 40px 43px;
+}
+.card__title{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+.card__description{
+  line-height: 23px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 16px 0 0 0;
+  padding: 0;
+  text-align: center;
+}
+
 .digits {
   margin: 100px auto;
 }
@@ -154,9 +196,8 @@
   font-size: 60px;
   font-weight: 600;
   color: var(--text-default);
-  display: flex;
   width: 60%;
-  justify-content: center;
+  text-align: center;
 }
 
 .section-subtitle {
@@ -166,9 +207,7 @@
   font-size: 24px;
   font-weight: normal;
   color: var(--text-default);
-  display: flex;
   width: 60%;
-  justify-content: center;
   text-align: center;
 }
 
