--- a/styles/style.css
+++ b/styles/style.css
@@ -185,6 +185,73 @@
   text-align: center;
 }
 
+.video{
+  margin-top: 100px;
+}
+
+.video__iframes{
+  display: flex;
+  justify-content: center;
+}
+
+.video__iframe{
+  width: 515px;
+  height: 316px;
+  margin: 50px 20px 0 0;
+}
+
+.video__iframe:last-child{
+  margin-right: 0;
+}
+
+
+.feynman {
+  min-height: 890px;
+  margin: 100px 0 0 0;
+  background-image: url(../images/feynman.png);
+  background-color: var(--bg-light);
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: bottom left;
+  position: relative;
+}
+
+.feynman__title {
+  margin: 0 auto;
+  padding: 100px 0 0 0;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  color: var(--text-default);
+  min-width: 648px;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  margin: 70px auto 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: var(--text-default);
+  width: fit-content;
+  text-align: center;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: var(--link-default);
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  text-decoration: none;
+}
+
+.feynman__link:hover{
+  text-decoration: underline;
+}
+
 .digits {
   margin: 100px auto;
 }
@@ -241,53 +308,6 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-}
-
-.feynman {
-  min-height: 890px;
-  margin: 100px 0 0 0;
-  background-image: url(../images/feynman.png);
-  background-color: var(--bg-light);
-  background-repeat: no-repeat;
-  background-size: 867px 637px;
-  background-position: bottom left;
-  position: relative;
-}
-
-.feynman__title {
-  margin: 0 auto;
-  padding: 100px 0 0 0;
-  line-height: 1.15;
-  font-size: 120px;
-  font-weight: 600;
-  color: var(--text-default);
-  min-width: 648px;
-  text-align: center;
-}
-
-.feynman__subtitle {
-  margin: 70px auto 0;
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  color: var(--text-default);
-  width: fit-content;
-  text-align: center;
-}
-
-.feynman__link {
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  color: var(--link-default);
-  position: absolute;
-  top: 50%;
-  right: 48px;
-  text-decoration: none;
-}
-
-.feynman__link:hover{
-  text-decoration: underline;
 }
 
 .kaufman{
