--- a/styles/style.css
+++ b/styles/style.css
@@ -1,99 +1,13 @@
-.page {
-  min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
-  max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
-  margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-}
+@import url(../blocks/page/page.css);
+
+@import url(../blocks/page/header/header.css);
+@import url(../blocks/page/logo/logo.css);
 
 :root {
   --bg-dark: #1f1f1f;
   --bg-light: #f2f2f2;
   --link-default: #2f80ed;
   --text-default: #000;
-}
-
-.header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  position: relative;
-  background-color: var(--bg-light);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.logo{
-  width: 228px;
-  height: 32px;
-  background-size: contain;
-}
-
-.logo_place_header {
-  background-image: url(../images/logo_place_header.svg);
-  position: absolute;
-  top: 30px;
-  left: 64px;
-}
-
-.header__title {
-  margin: 0 0 0 64px;
-  line-height: 96px;
-  font-size: 102px;
-  font-weight: 600;
-  color: var(--text-default);
-  max-width: 730px;
-  padding: 0;
-  z-index: 2;
-}
-
-.header__subtitle {
-  margin: 0;
-  padding: 0;
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-  color: var(--text-default);
-  max-width: 388px;
-  position: absolute;
-  bottom: 30px;
-  left: 64px;
-  z-index: 2;
-}
-
-.header__link {
-  color: var(--link-default);
-  text-decoration: none;
-  z-index: 3;
-}
-
-.header__link:hover{
-  text-decoration: underline;
-}
-
-.header__main-illustration {
-  background-image: url(../images/header-image.png);
-  width: 765px;
-  height: 608px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
-}
-
-.header__square-pic {
-  width: 568px;
-  height: 568px;
-  background-color: var(--link-default);
-  position: absolute;
-  top: 64px;
-  right: 0;
 }
 
 .description {
@@ -315,10 +229,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-.logo_place_footer {
-  background-image: url(../images/logo_place_footer.svg);
 }
 
 .footer__author{
