--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,3 +8,10 @@
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
+
+:root {
+  --bg-dark: #1f1f1f;
+  --bg-light: #f2f2f2;
+  --link-default: #2f80ed;
+  --text-default: #000;
+}
