--- a/styles/style.css
+++ b/styles/style.css
@@ -1,141 +1,67 @@
 @import url(../blocks/page/page.css);
 
-@import url(../blocks/page/header/header.css);
-@import url(../blocks/page/logo/logo.css);
+/* Стили хэдера */
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__title/header__title.css);
+@import url(../blocks/header/__subtitle/header__subtitle.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/header/__main-illustration/header__main-illustration.css);
+@import url(../blocks/header/__square-pic/header__square-pic.css);
 
-@import url(../blocks/page/content/description/description.css);
-@import url(../blocks/page/content/two-columns/two-columns.css);
+/* Стили лого */
+@import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
+@import url(../blocks/logo/_place/logo_place_footer.css);
 
-@import url(../blocks/page/content/section-title/section-title.css);
-@import url(../blocks/page/content/section-subtitle/section-subtitle.css);
+/* Стили контента */
 
-@import url(../blocks/page/content/digits/digits.css);
-@import url(../blocks/page/content/feynman/feynman.css);
-@import url(../blocks/page/content/kaufman/kaufman.css);
+/* Стили блока description */
+@import url(../blocks/description/description.css);
 
-:root {
-  --bg-dark: #1f1f1f;
-  --bg-light: #f2f2f2;
-  --link-default: #2f80ed;
-  --text-default: #000;
-}
+/* Стили блока two-columns */
+@import url(../blocks/two-columns/two-columns.css);
+@import url(../blocks/two-columns/__brief/two-columns__brief.css);
+@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
+@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
+@import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
 
-.table {
-  width: 1100px;
-  list-style: none;
-  margin: 0 auto;
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
+/* Стили блока section-title */
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
 
-.table__cell {
-  margin-top: 60px;
-  padding: 0;
-  width: 250px;
-}
 
-.table__heading {
-  margin: 0;
-  padding: 0;
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
-}
+/* Стили блока section-subtitle */
+@import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
 
-.table__text {
-  margin: 20px 0 0 0;
-  padding: 0;
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-}
+/* Стили блока digits */
+@import url(../blocks/digits/digits.css);
 
-.table_theme_dark{
-  position: relative;
-  z-index: 1;
-}
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-top: 80px;
-}
+/* Стили блока feynman */
+@import url(../blocks/feynman/feynman.css);
+@import url(../blocks/feynman/__title/feynman__title.css);
+@import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feynman/__link/feynman__link.css);
 
-.section-title_theme_dark{
-  color: white;
-  position: relative;
-  z-index: 1;
-}
+/* Стили блока kaufman */
+@import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 
-.section-subtitle_theme_dark{
-  color: white;
-  position: relative;
-  z-index: 1;
-}
+/* Стили блока table */
+@import url(../blocks/table/table.css);
+@import url(../blocks/table/_theme/table_theme_dark.css);
+@import url(../blocks/table/__cell/table__cell.css);
+@import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
+@import url(../blocks/table/__heading/table__heading.css);
+@import url(../blocks/table/__text/table__text.css);
 
-.footer{
-  background-color: var(--bg-dark);
-  min-height: 350px;
-  display: flex;
-}
-
-.footer__columns{
-  width: 90%;
-  margin: 60px auto 40px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer__column{
-  color: white;
-}
-
-.footer__column_content_copyright{
-  flex-basis: 711px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.footer__author{
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-  margin: 18px 0;
-}
-
-.footer__column-heading{
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: 600;
-  margin: 0;
-  padding: 0;
-}
-
-.footer__column-links{
-  list-style: none;
-  margin: 20px 0 18px;
-  padding: 0;
-}
-
-.footer__column-link{
-  color: white;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-}
-
-.footer__column-link:hover{
-  text-decoration: underline;
-}
-
-.footer__social-icon{
-  width: 16px;
-  object-fit: cover;
-  margin-right: 10px;
-}
+/* Стили блока footer */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__columns/footer__columns.css);
+@import url(../blocks/footer/__column/footer__column.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_copyright.css);
+@import url(../blocks/footer/__author/footer__author.css);
+@import url(../blocks/footer/__column-heading/footer__column-heading.css);
+@import url(../blocks/footer/__column-links/footer__column-links.css);
+@import url(../blocks/footer/__column-link/footer__column-link.css);
+@import url(../blocks/footer/__social-icon/footer__social-icon.css);
