--- a/page/page.css
+++ b/page/page.css
@@ -1,4 +1,4 @@
-@import url(../blocks/page/page.css);
+@import url(../vendor/normalize.css);
 
 /* Стили хэдера */
 @import url(../blocks/header/header.css);
@@ -65,3 +65,21 @@
 @import url(../blocks/footer/__column-links/footer__column-links.css);
 @import url(../blocks/footer/__column-link/footer__column-link.css);
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
+
+.page {
+  min-width: 1100px;
+  /* мы ещё не умеем делать мобильную версию сайта, */
+  /* поэтому выше установлена минимальная ширина страницы */
+  max-width: 1600px;
+  /* выше установили ограничение по максимальной ширине */
+  margin: 0 auto;
+  /* выше для экранов больше 1600px отцентрировали весь контент */
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+
+:root {
+  --bg-dark: #1f1f1f;
+  --bg-light: #f2f2f2;
+  --link-default: #2f80ed;
+  --text-default: #000;
+}
