--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -5,7 +5,6 @@
   font-size: 60px;
   font-weight: 600;
   color: var(--text-default);
-  display: flex;
+  text-align: center;
   width: 60%;
-  justify-content: center;
 }
