--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,6 @@
 .feynman {
   min-height: 890px;
-  margin: 100px 0 0 0;
+  margin: 0;
   background-image: url(../../images/feynman.png);
   background-color: var(--bg-light);
   background-repeat: no-repeat;
