--- a/page/page.css
+++ b/page/page.css
@@ -94,3 +94,139 @@
   --link-default: #2f80ed;
   --text-default: #000;
 }
+
+.video{
+  margin-top: 100px;
+  margin-bottom: -60px;
+}
+
+.video__iframes{
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.video__iframe{
+  margin-right: 20px;
+}
+
+.video__iframe:last-child{
+  margin-right: 0;
+}
+
+.oakley {
+  display: flex;
+  justify-content: center;
+  background-color: var(--bg-light);
+  margin: 0 auto;
+  padding: 160px 0 0 0;
+}
+
+.khan{
+  background-color: var(--bg-light);
+  margin: 0;
+  padding: 105px 0 0 0;
+  
+}
+
+.khan__container{
+  max-width: 80%;
+  margin: 0 auto;
+  
+}
+
+.khan__author{
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+  
+}
+
+.khan__title{
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  margin: 0 0 50px 0;
+  padding: 0;
+  
+}
+
+.khan__quote{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 0 36px 0;
+  padding: 0;
+  max-width: 790px;
+  
+}
+
+.khan__quote-author{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0 0 10px 0;
+  padding: 0;
+  
+}
+
+.khan__quote-author-subline{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 0 68px 0;
+  padding: 0;
+  
+}
+
+.khan__book-container{
+  
+  display: flex;
+}
+
+.khan__book-pic{
+  
+  width: 620px;
+  height: 608px;
+  object-fit: cover;
+  object-position: top;
+  margin-right: 48px;
+}
+
+.khan__buy-link{
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  color: var(--link-default);
+  text-decoration: none;
+  
+  margin: 0;
+  padding: 0;
+}
+
+.khan__buy-link:hover{
+  text-decoration: underline;
+}
+
+
+.resources {
+  margin: 100px auto 217px;
+}
+.resources__logo-zone {
+  min-width: 1100px;
+  display: flex;
+  margin: 80px auto 0;
+  justify-content: center;
+}
+.resourses__link {
+  width: 270px;
+  height: 38px;
+  display: flex;
+  justify-content: center;
+  
+}
+.resources__logo {
+  
+}
