--- a/blocks/khan/__quote-author/khan__quote-author.css
+++ b/blocks/khan/__quote-author/khan__quote-author.css
@@ -1,9 +1,8 @@
-.cards__title{  
-  margin: 43px 0 0 0;
-  padding: 0;
+.khan__quote-author{
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
-  text-align: center;
+  margin: 0 0 10px 0;
+  padding: 0;
   color: var(--text-default);
 }
