--- a/page/page.css
+++ b/page/page.css
@@ -15,11 +15,7 @@
 
 /* Стили контента */
 
-/* Стили блока description */
-@import url(../blocks/description/description.css);
-
-/* Стили блока techniques */
-@import url(../blocks/techniques/techniques.css);
+/* общие блоки */
 
 /* Стили блока cards */
 @import url(../blocks/cards/cards.css);
@@ -45,19 +41,6 @@
 @import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
 
-/* Стили блока digits */
-@import url(../blocks/digits/digits.css);
-
-/* Стили блока feynman */
-@import url(../blocks/feynman/feynman.css);
-@import url(../blocks/feynman/__title/feynman__title.css);
-@import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
-@import url(../blocks/feynman/__link/feynman__link.css);
-
-/* Стили блока kaufman */
-@import url(../blocks/kaufman/kaufman.css);
-@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
-
 /* Стили блока table */
 @import url(../blocks/table/table.css);
 @import url(../blocks/table/_theme/table_theme_dark.css);
@@ -65,6 +48,54 @@
 @import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
 @import url(../blocks/table/__heading/table__heading.css);
 @import url(../blocks/table/__text/table__text.css);
+
+
+/* контентные блоки */
+
+/* Стили блока description */
+@import url(../blocks/description/description.css);
+
+/* Стили блока techniques */
+@import url(../blocks/techniques/techniques.css);
+
+/* Стили блока video */
+@import url(../blocks/video/video.css);
+@import url(../blocks/video/__iframes/video__iframes.css);
+@import url(../blocks/video/__iframe/video__iframe.css);
+
+/* Стили блока oakley */
+@import url(../blocks/oakley/oakley.css);
+
+/* Стили блока feynman */
+@import url(../blocks/feynman/feynman.css);
+@import url(../blocks/feynman/__title/feynman__title.css);
+@import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feynman/__link/feynman__link.css);
+
+/* Стили блока digits */
+@import url(../blocks/digits/digits.css);
+
+/* Стили блока khan */
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__author/khan__author.css);
+@import url(../blocks/khan/__title/khan__title.css);
+@import url(../blocks/khan/__quote/khan__quote.css);
+@import url(../blocks/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__book-container/khan__book-container.css);
+@import url(../blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
+
+/* Стили блока kaufman */
+@import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
+
+/* Стили блока resources */
+@import url(../blocks/resources/resources.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
+@import url(../blocks/resources/__link/resourses__link.css);
 
 /* Стили блока footer */
 @import url(../blocks/footer/footer.css);
@@ -93,140 +124,4 @@
   --bg-light: #f2f2f2;
   --link-default: #2f80ed;
   --text-default: #000;
-}
-
-.video{
-  margin-top: 100px;
-  margin-bottom: -60px;
-}
-
-.video__iframes{
-  margin-top: 50px;
-  display: flex;
-  justify-content: center;
-}
-
-.video__iframe{
-  margin-right: 20px;
-}
-
-.video__iframe:last-child{
-  margin-right: 0;
-}
-
-.oakley {
-  display: flex;
-  justify-content: center;
-  background-color: var(--bg-light);
-  margin: 0 auto;
-  padding: 160px 0 0 0;
-}
-
-.khan{
-  background-color: var(--bg-light);
-  margin: 0;
-  padding: 105px 0 0 0;
-  
-}
-
-.khan__container{
-  max-width: 80%;
-  margin: 0 auto;
-  
-}
-
-.khan__author{
-  line-height: 42px;
-  font-size: 30px;
-  font-weight: normal;
-  margin: 0;
-  padding: 0;
-  
-}
-
-.khan__title{
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: 600;
-  margin: 0 0 50px 0;
-  padding: 0;
-  
-}
-
-.khan__quote{
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  margin: 0 0 36px 0;
-  padding: 0;
-  max-width: 790px;
-  
-}
-
-.khan__quote-author{
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
-  margin: 0 0 10px 0;
-  padding: 0;
-  
-}
-
-.khan__quote-author-subline{
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: normal;
-  margin: 0 0 68px 0;
-  padding: 0;
-  
-}
-
-.khan__book-container{
-  
-  display: flex;
-}
-
-.khan__book-pic{
-  
-  width: 620px;
-  height: 608px;
-  object-fit: cover;
-  object-position: top;
-  margin-right: 48px;
-}
-
-.khan__buy-link{
-  line-height: 42px;
-  font-size: 30px;
-  font-weight: normal;
-  color: var(--link-default);
-  text-decoration: none;
-  
-  margin: 0;
-  padding: 0;
-}
-
-.khan__buy-link:hover{
-  text-decoration: underline;
-}
-
-
-.resources {
-  margin: 100px auto 217px;
-}
-.resources__logo-zone {
-  min-width: 1100px;
-  display: flex;
-  margin: 80px auto 0;
-  justify-content: center;
-}
-.resourses__link {
-  width: 270px;
-  height: 38px;
-  display: flex;
-  justify-content: center;
-  
-}
-.resources__logo {
-  
 }
