--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -6,8 +6,10 @@
   text-decoration: none;
   display: flex;
   align-items: center;
+  height: 100%;
 }
 
 .footer__column-link:hover{
-  text-decoration: underline;
+  opacity: .7;
+  transition: opacity .125s ease;
 }
