--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,5 +1,5 @@
 .resources__logo-zone {
-  min-width: 1100px;
+  max-width: 1100px;
   display: flex;
   margin: 80px auto 0;
   justify-content: center;
