--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -5,5 +5,6 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  column-gap: 100px;
 }
