--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -5,6 +5,6 @@
   font-size: 120px;
   font-weight: 600;
   color: var(--text-default);
-  min-width: 648px;
+  max-width: 648px;
   text-align: center;
 }
