--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -3,9 +3,9 @@
   height: 38px;
   display: flex;
   justify-content: center;
-  transition: transform .275s ease;
 }
 
 .resources__link:hover{
-  transform: scale(1.2);
+  opacity: .5;
+  transition: opacity .125s ease;
 }
